--- a/OnlineShopping/app/src/main/res/drawable/ic_home.xml
+++ b/OnlineShopping/app/src/main/res/drawable/ic_home.xml
@@ -1,9 +1,6 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="19.792dp"
-    android:height="20.833dp"
-    android:viewportWidth="19.792"
-    android:viewportHeight="20.833">
-  <path
-      android:pathData="M6.911,19.556V16.37A1.478,1.478 0,0 1,8.394 14.9h2.994a1.488,1.488 0,0 1,1.049 0.431,1.467 1.467,0 0,1 0.434,1.041v3.185a1.264,1.264 0,0 0,0.371 0.9,1.283 1.283,0 0,0 0.907,0.375h2.043a3.6,3.6 0,0 0,2.545 -1.041,3.552 3.552,0 0,0 1.055,-2.524V8.195a2.576,2.576 0,0 0,-0.933 -1.981L11.91,0.7A3.226,3.226 0,0 0,7.8 0.778L1.007,6.213A2.577,2.577 0,0 0,0 8.195v9.065a3.587,3.587 0,0 0,3.6 3.574h2a1.283,1.283 0,0 0,1.287 -1.268Z"
-      android:fillColor="#000759"/>
+<vector android:height="20dp" android:viewportHeight="21"
+    android:viewportWidth="21" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000" android:fillType="evenOdd"
+        android:pathData="M16.8,18.5L13.65,18.5L13.65,14.5L7.35,14.5L7.35,18.5L4.2,18.5L4.2,9.313L10.489,3.323L16.8,9.332L16.8,18.5ZM18.9,8.504L18.9,8.5L18.9,8.5L10.502,0.5L0,10.492L1.482,11.906L2.1,11.313L2.1,20.5L9.45,20.5L9.45,16.5L11.55,16.5L11.55,20.5L18.9,20.5L18.9,20.497L18.9,11.332L19.514,11.916L21.001,10.502L18.9,8.504Z"
+        android:strokeColor="#00000000" android:strokeWidth="1"/>
 </vector>
