--- a/OnlineShopping/app/src/main/res/layout/fragment_product_details.xml
+++ b/OnlineShopping/app/src/main/res/layout/fragment_product_details.xml
@@ -45,6 +45,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ProgressBar
+                android:id="@+id/progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="invisible"/>
+
+
             <com.smarteist.autoimageslider.SliderView
                 android:id="@+id/productSliderView"
                 android:layout_width="0dp"
