--- a/Learning/app/src/main/res/values/themes.xml
+++ b/Learning/app/src/main/res/values/themes.xml
@@ -2,4 +2,11 @@
 <resources>
 
     <style name="Theme.Learning" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/cardview_light_background</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/cardview_light_background</item>
+    </style>
 </resources>
